Fixing alignment error with example box

--- a/theme/_scss/partials/_specification.scss
+++ b/theme/_scss/partials/_specification.scss
@@ -123,7 +123,6 @@ li.collapsed > ol.bonsai {
 .modal {
   display: inline-block;
   vertical-align: middle;
-  position: relative;
   z-index: 2;
   width: 400px;
   background: #fff;
